# pandas-iris

./: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/base/: catalog.yml
notebooks/: data-exploration.ipynb  first-exploration.ipynb
src/pandas_iris/: __main__.py
src/pandas_iris/pipelines/data_processing/: nodes.py  pipeline.py
