[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "pandas_iris"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
pandas-iris = "pandas_iris.__main__:main"

[tool.kedro]
package_name = "pandas_iris"
project_name = "pandas-iris"
kedro_init_version = "0.19.2"
tools = [ "Linting", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "pandas_iris.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
